<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashActivity">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/iv_splash_logo"
        android:src="@drawable/splash_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/splash_logo"/>

    <TextView
        android:id="@+id/tv_splash_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/iv_splash_logo"
        android:fontFamily="@font/poppins_medium"
        android:layout_marginTop="90dp"
        android:gravity="center"
        android:text="@string/splash_title"
        android:textSize="17sp"
        android:layout_centerVertical="true"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_splash_title"
        android:fontFamily="@font/poppins_regular"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/creator"
        android:textSize="12sp"
        android:layout_centerVertical="true"/>

</androidx.constraintlayout.widget.ConstraintLayout>