<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:background="@color/black"
        android:backgroundTint="@color/blue_light"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginHorizontal="30dp"
        app:cardCornerRadius="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_logo"
                android:layout_width="160dp"
                android:layout_height="160dp"
                tools:src="@drawable/webstorm"
                android:layout_marginTop="10dp"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                tools:text="@string/test"
                android:textColor="@color/grey_black"
                android:textSize="20sp"
                android:fontFamily="@font/poppins_medium"
                android:gravity="center"
                android:layout_marginTop="150dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textSize="15sp"
                android:textColor="@color/grey_black"
                android:fontFamily="@font/poppins_medium"
                android:layout_marginTop="200dp"
                android:layout_marginStart="10dp"/>

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="230dp"
                android:text="@string/testDesc"
                android:textColor="@color/grey_black"/>

            <ImageView
                android:id="@+id/iv_action_share"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/share"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/tv_description"
                android:layout_marginTop="85dp"/>


        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>